--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
 LIB_TITLE=TpAnimation
 LIB_AUTHOR=Micha³ Urbañski (tajny_projekt)
 LIB_VERSION=0.9
-JAR_PATH=tpanimation/library/
-DOCS_PATH=tpanimation/reference/
+OUT_PATH=tpanimation
