--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 *.java linguist-detectable=true
-.css linguist-detectable=false
+*.css linguist-detectable=false
 *.js linguist-detectable=false
 *.html linguist-detectable=false
 *.xml linguist-detectable=false
